# find-me-a-home-v2

./: .gitignore  .vercelignore  CLAUDE.md  build.py  config.py  fetchers.py  manage_schools.py  map.py  pyproject.toml  rendering.py  requirements.txt  server.py  vercel.json
data/: Housing_2026-06-14-1602.csv  Housing_2026-06-14-1952.csv  Housing_2026-06-15-0937.csv  Housing_2026-06-16-0943.csv  housing_data.csv  mags_zone.geojson  preferences.json  schools.json  schools_config.json  thumbnails.json  zone_1282.geojson  zone_48.geojson
tests/: conftest.py  test_config.py  test_fetchers.py  test_manage_schools.py  test_map.py  test_rendering.py  test_server.py
